--- a/client/main.html
+++ b/client/main.html
@@ -3,8 +3,9 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
+  <h1>JOA!!! :3</h1>
+  <img src="http://s2.quickmeme.com/img/7f/7f33d093b8f483242613e15e456fe37de9269948b09e8ceefa03d240187977c7.jpg">
+  <br>
   {{> hello}}
   {{> info}}
 </body>
@@ -15,11 +16,11 @@
 </template>
 
 <template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
+  <!--<h2>Learn Meteor!</h2>-->
+  <!--<ul>-->
+    <!--<li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>-->
+    <!--<li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>-->
+    <!--<li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>-->
+    <!--<li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>-->
+  <!--</ul>-->
 </template>
