--- a/client/main.html
+++ b/client/main.html
@@ -4,10 +4,10 @@
 
 <body>
   <h1>JOA!!! :3</h1>
-  <img src="http://s2.quickmeme.com/img/7f/7f33d093b8f483242613e15e456fe37de9269948b09e8ceefa03d240187977c7.jpg">
+  <!--<img src="http://s2.quickmeme.com/img/7f/7f33d093b8f483242613e15e456fe37de9269948b09e8ceefa03d240187977c7.jpg">-->
   <br>
-  {{> hello}}
-  {{> info}}
+  <!--{{> hello}}-->
+  <!--{{> info}}-->
 </body>
 
 <template name="hello">
