--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -1,10 +1,14 @@
-<body>
-<h1>JOA!!! :3</h1>
-<img src="http://s2.quickmeme.com/img/7f/7f33d093b8f483242613e15e456fe37de9269948b09e8ceefa03d240187977c7.jpg">
-<br>
-{{> hello}}
-{{> addReunion}}
-</body>
+<!--<body>-->
+<!--<h1>JOA!!! :3</h1>-->
+<!--<img src="http://s2.quickmeme.com/img/7f/7f33d093b8f483242613e15e456fe37de9269948b09e8ceefa03d240187977c7.jpg">-->
+<!--<br>-->
+<!--{{> hello}}-->
+<!--{{> addReunion}}-->
+<!--</body>-->
+
+<template name="Home">
+    Index
+</template>
 
 <template name="hello">
     <button>Click Me</button>
