add routes, admin and home,  checking admin page logged

--- a/imports/ui/admin/adminHome.html
+++ b/imports/ui/admin/adminHome.html
@@ -1,3 +1,7 @@
 <template name="AdminHome">
-    Test
+    <!--{{#if currentUser}}-->
+
+        Test
+    <!--{{> loginButtons}}-->
+    <!--{{/if}}-->
 </template>
