--- a/imports/ui/admin/login/login.html
+++ b/imports/ui/admin/login/login.html
@@ -1,3 +1,37 @@
 <template name="Login">
-    Login
+    <br>
+    <div class="col-md-6 col-md-offset-3">
+        <div class="panel panel-primary">
+            <div class="panel-heading"> <h3 class="panel-title">Login</h3> </div>
+            <div class="panel-body">
+
+
+                <div class="form-group">
+                    <label for="email" class="cols-sm-2 control-label">Your Email</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+                            <input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="name" class="cols-sm-2 control-label">Your Password</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-key fa" aria-hidden="true"></i></span>
+                            <input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="login-register">
+                    <a id="login-btn" class="btn btn-primary">Login</a>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
 </template>
