working on login screen

--- a/imports/ui/admin/login/login.html
+++ b/imports/ui/admin/login/login.html
@@ -6,22 +6,22 @@
             <div class="panel-body">
 
 
-                <div class="form-group">
+                <div class="form-group {{hasError}}">
                     <label for="email" class="cols-sm-2 control-label">Your Email</label>
                     <div class="cols-sm-10">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-                            <input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email"/>
+                            <input type="text" class="form-control {{hasError}}" name="email" id="email"  placeholder="Enter your Email"/>
                         </div>
                     </div>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group {{hasError}}">
                     <label for="name" class="cols-sm-2 control-label">Your Password</label>
                     <div class="cols-sm-10">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-key fa" aria-hidden="true"></i></span>
-                            <input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password"/>
+                            <input type="password" class="form-control " name="password" id="password"  placeholder="Enter your Password"/>
                         </div>
                     </div>
                 </div>
