--- a/imports/ui/admin/adminHome.html
+++ b/imports/ui/admin/adminHome.html
@@ -1,8 +1,3 @@
 <template name="AdminHome">
-    <!--{{#if currentUser}}-->
-        {{> loginButtons}}
-
-        <img src="http://s2.quickmeme.com/img/bc/bc11fad8017bea5537859c64ec345f8e6c0503ca66051b2c470c15ec852c7775.jpg">
-<!---->
-    <!--{{/if}}-->
+ admin
 </template>
