--- a/imports/ui/admin/navbar.html
+++ b/imports/ui/admin/navbar.html
@@ -30,6 +30,9 @@
                         <li>
                             <a href="/admin/contacto"><i class="fa fa-envelope fa margin-right-10" aria-hidden="true" ></i>Contacto</a>
                         </li>
+                        <!--<li>-->
+                            <!--{{>loginButtons}}-->
+                        <!--</li>-->
                     </ul>
                 </div>
             </div>
