--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -7,7 +7,7 @@
 <!--</body>-->
 
 <template name="Home">
-    Index
+    <a href="https://imgflip.com/i/1k24g3"><img src="https://i.imgflip.com/1k24g3.jpg" title="made at imgflip.com"/></a>
 </template>
 
 <template name="hello">
