--- a/imports/ui/admin/navbar.html
+++ b/imports/ui/admin/navbar.html
@@ -16,7 +16,7 @@
                     <ul class="nav navbar-nav">
                         <li>
 
-                            <a href="/admin/acontecimientos"><i class="fa fa-calendar fa margin-right-10" aria-hidden="true" ></i>Acontecimientos</a>
+                            <a href="/admin/actividades"><i class="fa fa-calendar fa margin-right-10" aria-hidden="true" ></i>Actividades</a>
                         </li>
                         <li>
                             <a href="/admin/review"><i class="fa fa-book fa margin-right-10" aria-hidden="true" ></i>Reseñas</a>
