--- a/imports/ui/admin/actividades/actividades.html
+++ b/imports/ui/admin/actividades/actividades.html
@@ -5,7 +5,7 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a class="pointer-click"><button type="button" class="btn btn-success btn-circle btn-lg margin-right-10"><span class="fa fa-plus"></span></button>Agregar actividad</a>
+                    <a class="addActivity pointer-click"><button type="button" class="btn btn-success btn-circle btn-lg margin-right-10"><span class="fa fa-plus"></span></button>Agregar actividad</a>
                 </li>
 
             </ul>
