--- a/imports/ui/admin/actividades/addActivityModal.html
+++ b/imports/ui/admin/actividades/addActivityModal.html
@@ -8,7 +8,24 @@
                 </div>
 
                 <div class="modal-body">
-                    <p>Info de actividad</p>
+                    <div class="">
+                        <div class="form-group">
+                            <label class="nombreActividad" >Caratula:</label>
+                            <input type="file"  class="form-control-file" id="caratula">
+                        </div>
+                        <div class="form-group">
+                            <label class="nombreActividad" >Nombre de actividad:</label>
+                            <input class="form-control" id="nombreActividad">
+                        </div>
+                        <div class="form-group">
+                            <label class="fechaActividad" >Fecha:</label>
+                            <input type="text" class="form-control" id="my-datepicker">
+                        </div>
+                        <div class="form-group">
+                            <label class="textoActividad">Texto:</label>
+                            <textarea type="text" class="form-control" id="textoActividad" rows="8"></textarea>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="modal-footer">
