--- a/imports/ui/admin/actividades/addActivityModal.html
+++ b/imports/ui/admin/actividades/addActivityModal.html
@@ -18,8 +18,16 @@
                             <input class="form-control" id="nombreActividad">
                         </div>
                         <div class="form-group">
-                            <label class="fechaActividad" >Fecha:</label>
-                            <input type="text" class="form-control" id="my-datepicker">
+                            <label class="fechaActividad" >Fecha inicio:</label>
+                            <!--<div class='col-sm-6'>-->
+                                <input type='text' class="form-control" id='datetimepickerInicio' />
+                            <!--</div>-->
+                        </div>
+                        <div class="form-group">
+                            <label class="fechaActividad" >Fecha fin:</label>
+                            <!--<div class='col-sm-6'>-->
+                            <input type='text' class="form-control" id='datetimepickerFin' />
+                            <!--</div>-->
                         </div>
                         <div class="form-group">
                             <label class="textoActividad">Texto:</label>
