--- a/imports/ui/admin/actividades/addActivityModal.html
+++ b/imports/ui/admin/actividades/addActivityModal.html
@@ -37,8 +37,8 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-success" data-dismiss="modal">Salvar</button>
+                    <button type="button" class="btn btn-default cancel-btn" data-dismiss="modal">Cancelar</button>
+                    <a type="button" class="btn btn-success save-btn">Salvar</a>
                 </div>
 
             </div>
