--- a/imports/ui/admin/actividades/actividades.html
+++ b/imports/ui/admin/actividades/actividades.html
@@ -65,7 +65,7 @@
                                                             <button class="btn btn-default btn-remove">
                                                                 <i class="fa fa-trash fa-fw"></i>
                                                             </button>
-                                                            <button class="btn btn-default" id="add-note">
+                                                            <button class="btn btn-default" id="edit-actividad">
                                                                 <i class="fa fa-pencil fa-fw"></i>
                                                             </button>
                                                         </div>
