--- a/imports/ui/admin/actividades/addActivityModal.html
+++ b/imports/ui/admin/actividades/addActivityModal.html
@@ -11,7 +11,16 @@
                     <div class="">
                         <div class="form-group">
                             <label class="nombreActividad" >Caratula:</label>
-                            <input type="file"  class="form-control-file" id="caratula">
+                            <!--<input type="file"  class="form-control-file" id="caratula">-->
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div id="dropzone" class="dropzone">
+                                        <div class="well well-drop-zone">
+                                            Drop file(s) here to upload
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label class="nombreActividad" >Nombre de actividad:</label>
