added edit actividad

--- a/imports/ui/admin/actividades/addActivityModal.html
+++ b/imports/ui/admin/actividades/addActivityModal.html
@@ -24,7 +24,7 @@
                         </div>
                         <div class="form-group">
                             <label class="nombreActividad" >Nombre de actividad:</label>
-                            <input class="form-control" id="nombreActividad">
+                            <input class="form-control" id="nombreActividad" value="{{nombreActividad}}">
                         </div>
                         <div class="form-group">
                             <label class="fechaActividad" >Fecha inicio:</label>
@@ -40,7 +40,7 @@
                         </div>
                         <div class="form-group">
                             <label class="textoActividad">Texto:</label>
-                            <textarea type="text" class="form-control" id="textoActividad" rows="8"></textarea>
+                            <textarea type="text" class="form-control" id="textoActividad" rows="8" value="{{textoActividad}}"></textarea>
                         </div>
                     </div>
                 </div>
