--- a/imports/ui/admin/navbar.html
+++ b/imports/ui/admin/navbar.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-inverse margin-0 border-rect" role="navigation">
         <!--<div class="col-md-1">-->
             <!--<img style="max-width:100%;max-height:100%" src="https://scontent.fmvd1-1.fna.fbcdn.net/v/t31.0-8/10258303_10203562614763548_2985585671116712761_o.jpg?oh=110e64200e8d6b2d83ee1c1b0068f160&oe=592DF2BE">-->
-
+        {{> notifications}}
         <!--</div>-->
         <!--<div class="col-md-11">-->
             <div class="container">
