--- a/imports/ui/admin/quienesSomos/quienesSomosAdmin.html
+++ b/imports/ui/admin/quienesSomos/quienesSomosAdmin.html
@@ -5,7 +5,7 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a class="addActivity pointer-click"><button type="button" class="btn btn-success btn-circle btn-lg margin-right-10"><span class="fa fa-plus"></span></button>Agregar persona</a>
+                    <a class="addPersona pointer-click"><button type="button" class="btn btn-success btn-circle btn-lg margin-right-10"><span class="fa fa-plus"></span></button>Agregar persona</a>
                 </li>
 
             </ul>
@@ -17,18 +17,46 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="form-group">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
                             <h3 class="textoActividad">Presentación:</h3>
+                            </div>
+                            <div class="panel-body">
                             <textarea type="text" class="form-control" id="textoPresentacion" rows="8" value="{{presentacion}}"></textarea>
+                            </div>
+
+                        </div>
+                        {{#if personas}}
+
+                        <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3>Personas</h3>
                         </div>
 
-                        <!--<div class="form-group">-->
-                            <!--<h3 class="textoActividad">Presentación:</h3>-->
-                            <!--<textarea type="text" class="form-control" id="textoActividad" rows="8" value="{{presentacion}}"></textarea>-->
-                        <!--</div>-->
+                        {{#each personas}}
+
+                                <div class="panel-body">
+                                    <div class="form-group">
+                                        <h5 class="textoActividad">     Nombre:</h5>
+                                        <input type="text" class="form-control persona-Nombre" placeholder=""/>
+                                    </div>
+                                    <div class="form-group">
+                                        <h5 class="textoActividad">Descripcion:</h5>
+                                        <textarea type="text" class="form-control descripcion-persona"  rows="8" value="{{texto}}"></textarea>
+                                    </div>
+                                </div>
+                                <hr>
+
+
+
+                        {{/each}}
+
+                    </div>
+                        {{/if}}
+
                         <a class="save-changes btn-success btn">Salvar</a>
                     </div>
-                </div>
+                    </div>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
