--- a/imports/ui/admin/actividades/actividades.html
+++ b/imports/ui/admin/actividades/actividades.html
@@ -13,7 +13,7 @@
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
-        <div id="page-content-wrapper" class="no-padding">
+        <div id="page-content-wrapper" class="">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
