--- a/imports/ui/admin/quienesSomos/quienesSomosAdmin.html
+++ b/imports/ui/admin/quienesSomos/quienesSomosAdmin.html
@@ -13,7 +13,7 @@
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
-        <div id="page-content-wrapper" class="no-padding">
+        <div id="page-content-wrapper" >
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
@@ -45,6 +45,9 @@
                                         <textarea type="text" class="form-control descripcion-persona"  rows="8" value="{{texto}}"></textarea>
                                     </div>
                                 </div>
+                                <button class="btn btn-default btn-remove margin-left-15">
+                                    <i class="fa fa-trash fa-fw"></i>
+                                </button>
                                 <hr>
 
 
