--- a/imports/ui/admin/quienesSomos/quienesSomosAdmin.html
+++ b/imports/ui/admin/quienesSomos/quienesSomosAdmin.html
@@ -38,14 +38,14 @@
                                 <div class="panel-body">
                                     <div class="form-group">
                                         <h5 class="textoActividad">     Nombre:</h5>
-                                        <input type="text" class="form-control persona-Nombre" placeholder=""/>
+                                        <input type="text" class="form-control persona-Nombre" placeholder="" value="{{nombre}}"/>
                                     </div>
                                     <div class="form-group">
                                         <h5 class="textoActividad">Descripcion:</h5>
                                         <textarea type="text" class="form-control descripcion-persona"  rows="8" value="{{texto}}"></textarea>
                                     </div>
                                 </div>
-                                <button class="btn btn-default btn-remove margin-left-15">
+                                <button class="btn btn-default btn-remove-person margin-left-15 ">
                                     <i class="fa fa-trash fa-fw"></i>
                                 </button>
                                 <hr>
