added quienes somos

--- a/imports/ui/admin/quienesSomos/quienesSomosAdmin.html
+++ b/imports/ui/admin/quienesSomos/quienesSomosAdmin.html
@@ -57,7 +57,7 @@
                     </div>
                         {{/if}}
 
-                        <a class="save-changes btn-success btn">Salvar</a>
+                        <a class="save-changes btn-success btn">Guardar</a>
                     </div>
                     </div>
             </div>
