--- a/imports/ui/admin/actividades/addActivityModal.html
+++ b/imports/ui/admin/actividades/addActivityModal.html
@@ -47,7 +47,7 @@
 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default cancel-btn" data-dismiss="modal">Cancelar</button>
-                    <a type="button" class="btn btn-success save-btn">Salvar</a>
+                    <a type="button" class="btn btn-success save-btn">Guardar</a>
                 </div>
 
             </div>
