--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -9,21 +9,28 @@
 <template name="Home">
     <!--<a href="https://imgflip.com/i/1k24g3"><img src="https://i.imgflip.com/1k24g3.jpg" title="made at imgflip.com"/></a>-->
     <div  style="height:1000px">
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -20px, 0px)"  style="background-image: url('http://www.firewatchgame.com/images/parallax/parallax0.png');background-color: #ffaf1b;position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -20px, 0px)"  style="background-image: url('layer0top.png');position: fixed;background-position: bottom center;
     background-size: auto 1038px;
-    background-repeat: repeat-x;
+    background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -40px, 0px)"  style="background-image: url('http://www.firewatchgame.com/images/parallax/parallax1.png');position: fixed;background-position: bottom center;
+
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -40px, 0px)"  style="margin-top:50px;background-image: url('layer1top.png');position: fixed;background-position: bottom center;
            background-size: auto 1038px;
     background-repeat: repeat-x;
     width: 100%;height: 1000px;"> </div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -105px, 0px)"  style="background-image: url('http://www.firewatchgame.com/images/parallax/parallax2.png');position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -100px, 0px)"  style="margin-top:250px;background-image: url('layer2top.png');position: fixed;background-position: bottom center;
            background-size: auto 1038px;
     background-repeat: repeat-x;
     width: 100%;height: 1000px;"> </div>
-
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -150px, 0px)"  style="margin-top:270px;background-image: url('layer3top.png');position: fixed;background-position: bottom center;
+           background-size: auto 1038px;
+    background-repeat: repeat-x;
+    width: 100%;height: 1000px;"> </div>
+      <!--<image src= "/imports/images/layer0top.png">-->
+<!---->
+      <!--</image>-->
 
     <!--<div data-0="margin-top:10px" data-500="margin-top:100px">WOOOT</div>-->
     </div>
