--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -8,9 +8,10 @@
 
 <template name="Home">
     <!--<a href="https://imgflip.com/i/1k24g3"><img src="https://i.imgflip.com/1k24g3.jpg" title="made at imgflip.com"/></a>-->
-    <div  style="height:1000px">
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -20px, 0px)"  style="background-image: url('layer0top.png');position: fixed;background-position: bottom center;
-    background-size: auto 1038px;
+    <div  style="height:1000px; width:100%">
+
+        <div data-0="transform: translate3d(0px, 0px, 0px);background-color:#2d3e54" data-1000="transform: translate3d(0px, -20px, 0px);background-color:#2d3e55"  style="background-image: url('layer0top.png'); position: fixed;background-position: center top;
+    background-size: 110%;
     background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
 
@@ -27,6 +28,10 @@
         <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -150px, 0px)"  style="margin-top:270px;background-image: url('layer3top.png');position: fixed;background-position: bottom center;
            background-size: auto 1038px;
     background-repeat: repeat-x;
+    width: 100%;height: 1000px;"> </div>
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -30px, 0px)"  style="margin-top:100px;background-image: url('logo.png');position: fixed;background-position: center top;
+    background-size: auto 190px;
+    background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
       <!--<image src= "/imports/images/layer0top.png">-->
 <!---->
