--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -9,8 +9,12 @@
 <template name="Home">
     <!--<a href="https://imgflip.com/i/1k24g3"><img src="https://i.imgflip.com/1k24g3.jpg" title="made at imgflip.com"/></a>-->
     <div  style="height:1000px; width:100%">
+        <div data-0="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(214, 30%, 25%), hsl(214, 30%, 25%));" data-500="background-image: linear-gradient(0deg, hsl(0, 100%, 50%), hsl(40, 50%, 50%));" data-1000="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(40, 50%, 50%),hsl(40, 50%, 50%));"  style="position: fixed;background-position: center top;
+    background-size: 110%;
+    background-repeat: no-repeat;
+    width: 100%;height: 1000px;"> </div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);background-color:#2d3e54" data-1000="transform: translate3d(0px, -20px, 0px);background-color:#2d3e55"  style="background-image: url('layer0top.png'); position: fixed;background-position: center top;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -20px, 0px);"  style="background-image: url('layer0top.png'); position: fixed;background-position: center top;
     background-size: 110%;
     background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
