--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -13,12 +13,16 @@
              data-250 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(214, 0%, 25%), hsl(214, 30%, 25%));"
              data-251 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(0, 0%, 25%), hsl(214, 30%, 25%));"
              data-400 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(0, 30%, 35%), hsl(214, 0%, 25%));"
-             data-401 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(0, 30%, 35%), hsl(40, 0%, 25%));"
-             data-500="background-image: linear-gradient(0deg, hsl(0, 100%, 50%), hsl(40, 50%, 50%));"
-             data-1000="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(40, 50%, 50%),hsl(40, 50%, 50%));"  style="position: fixed;background-position: center top;
+             data-401 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(0, 30%, 35%), hsl(47, 0%, 25%));"
+             data-500="background-image: linear-gradient(0deg, hsl(0, 100%, 50%), hsl(47, 100%, 50%));"
+             data-1000="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(47, 100%, 50%),hsl(47, 100%, 50%));"  style="position: fixed;background-position: center top;
     background-size: 110%;
     background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
+        <!--<div   style="position: fixed;background-color:#2d3e54;background-position: center top;-->
+    <!--background-size: 110%;-->
+    <!--background-repeat: no-repeat;-->
+    <!--width: 100%;height: 1000px;"> </div>-->
 
         <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -20px, 0px);"  style="background-image: url('layer0top.png'); position: fixed;background-position: center top;
     background-size: 110%;
