--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -8,7 +8,7 @@
 
 <template name="Home">
     <!--<a href="https://imgflip.com/i/1k24g3"><img src="https://i.imgflip.com/1k24g3.jpg" title="made at imgflip.com"/></a>-->
-    <div  style="height:1000px; width:100%">
+    <div  style="height:1000px; width:100%; background-color:#357c8d" >
         <div data-0="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(214, 30%, 25%), hsl(214, 30%, 25%));"
              data-250 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(214, 0%, 25%), hsl(214, 30%, 25%));"
              data-251 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(0, 0%, 25%), hsl(214, 30%, 25%));"
@@ -18,7 +18,7 @@
              data-1000="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(47, 100%, 50%),hsl(47, 100%, 50%));"  style="position: fixed;background-position: center top;
     background-size: 110%;
     background-repeat: no-repeat;
-    width: 100%;height: 1000px;"> </div>
+    width: 100%;height: 500px;"> </div>
         <!--<div   style="position: fixed;background-color:#2d3e54;background-position: center top;-->
     <!--background-size: 110%;-->
     <!--background-repeat: no-repeat;-->
@@ -47,12 +47,16 @@
     background-size: auto 190px;
     background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
+
+        <div ></div>
       <!--<image src= "/imports/images/layer0top.png">-->
 <!---->
       <!--</image>-->
 
     <!--<div data-0="margin-top:10px" data-500="margin-top:100px">WOOOT</div>-->
     </div>
+    <div style="height:1000px; margin-top:-5px; width:100%; background-color:#357c8d">
 
+    </div>
     <script type="text/javascript" src="skrollr.min.js"></script>
 </template>
