added facebook link

--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -9,45 +9,68 @@
 <template name="Home">
     <!--<a href="https://imgflip.com/i/1k24g3"><img src="https://i.imgflip.com/1k24g3.jpg" title="made at imgflip.com"/></a>-->
     <div  style="height:1000px; width:100%; background-color:#357c8d" >
-        <div data-0="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(214, 30%, 25%), hsl(214, 30%, 25%));"
-             data-250 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(214, 0%, 25%), hsl(214, 30%, 25%));"
-             data-251 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(0, 0%, 25%), hsl(214, 30%, 25%));"
-             data-400 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(0, 30%, 35%), hsl(214, 0%, 25%));"
-             data-401 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(0, 30%, 35%), hsl(47, 0%, 25%));"
-             data-500="background-image: linear-gradient(0deg, hsl(0, 100%, 50%), hsl(47, 100%, 50%));"
-             data-1000="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(47, 100%, 50%),hsl(47, 100%, 50%));"  style="position: fixed;background-position: center top;
-    background-size: 110%;
-    background-repeat: no-repeat;
-    width: 100%;height: 500px;"> </div>
-        <!--<div   style="position: fixed;background-color:#2d3e54;background-position: center top;-->
+        <!--<div data-0="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(214, 30%, 25%), hsl(214, 30%, 25%));"-->
+             <!--data-250 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(214, 0%, 25%), hsl(214, 30%, 25%));"-->
+             <!--data-251 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(0, 0%, 25%), hsl(214, 30%, 25%));"-->
+             <!--data-400 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(0, 30%, 35%), hsl(214, 0%, 25%));"-->
+             <!--data-401 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(0, 30%, 35%), hsl(47, 0%, 25%));"-->
+             <!--data-500="background-image: linear-gradient(0deg, hsl(0, 100%, 50%), hsl(47, 100%, 50%));"-->
+             <!--data-1000="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(47, 100%, 50%),hsl(47, 100%, 50%));"  style="position: fixed;background-position: center top;-->
     <!--background-size: 110%;-->
     <!--background-repeat: no-repeat;-->
-    <!--width: 100%;height: 1000px;"> </div>-->
+    <!--width: 100%;height: 500px;"> </div>-->
+        <div   data-0="transform: translate3d(0px, 0px, 0px);top:0%" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-100%" style="position: fixed;background-color:#2d3e54;background-position: center top;
+    background-size: 110%;
+    background-repeat: no-repeat;
+    width: 100%;height: 700px;"> </div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -20px, 0px);"  style="background-image: url('layer0top.png'); position: fixed;background-position: center top;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -20px, 0px);"  data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-100%" style="background-image: url('layer0top.png'); position: fixed;background-position: center top;
     background-size: 110%;
     background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -40px, 0px)"  style="margin-top:50px;background-image: url('layer1top.png');position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -40px, 0px)"  data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-100%" style="margin-top:50px;background-image: url('layer1top.png');position: fixed;background-position: bottom center;
            background-size: auto 1038px;
     background-repeat: repeat-x;
     width: 100%;height: 1000px;"> </div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -100px, 0px)"  style="margin-top:250px;background-image: url('layer2top.png');position: fixed;background-position: bottom center;
+
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -100px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-100%"  style="margin-top:250px;background-image: url('layer2top.png');position: fixed;background-position: bottom center;
            background-size: auto 1038px;
     background-repeat: repeat-x;
     width: 100%;height: 1000px;"> </div>
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -150px, 0px)"  style="margin-top:270px;background-image: url('layer3top.png');position: fixed;background-position: bottom center;
+
+        <!--facebokk-->
+
+
+        <div data-0="transform: translate3d(0px, 0px, 0px);top:800px; display:block" data-1000="transform: translate3d(0px, -150px, 0px);top:800px" data-1001="top:800px" data-1500="top:800px" data-2000="top:-10%" data-2500=";top:-10%" data-3500="top:-10%" style="background-color:#357c8d;position: fixed;background-position: bottom center;
+    width: 100%;height: 400px;"> </div>
+
+        <div data-0="display:none" data-2000="display:block; top:0%" data-3000="display:block; top:50%" data-3500="display:block; top:50%" style="position: fixed;width:100%">
+            <h1>
+                <span data-2000="margin-top:-1000px" data-3000="margin-top:-20px" data-3500="margin-top:0px" class="facebookLink" style="right:40px">K</span>
+                <span data-2500="margin-top:-1000px" data-3000="margin-top:10px" data-3500="margin-top:0px" class="facebookLink" style="right:75px">O</span>
+                <span data-1000="margin-top:-1000px" data-3200="margin-top:0px" data-3500="margin-top:0px" class="facebookLink" style="right:110px">O</span>
+                <span data-2500="margin-top:-500px" data-3000="margin-top:50px" data-3500="margin-top:0px" class="facebookLink" style="right:145px">B</span>
+                <span data-2500="margin-top:-1000px" data-3300="margin-top:-15px" data-3500="margin-top:0px" class="facebookLink" style="right:180px">E</span>
+                <span data-2500="margin-top:-700px" data-3000="margin-top:-100px" data-3500="margin-top:0px" class="facebookLink" style="right:215px">C</span>
+                <span data-2500="margin-top:-1000px" data-3000="margin-top:0px" data-3500="margin-top:0px" class="facebookLink" style="right:250px">A</span>
+                <span data-2500="margin-top:-1000px" data-3300="margin-top:15px" data-3500="margin-top:0px" class="facebookLink" style="right:285px">F</span>
+
+            </h1>
+        </div>
+        <!--<div ata-0="transform: translate3d(0px, 0px, 0px);top:95%" data-1000="transform: translate3d(0px, -150px, 0px);top:100%" data-1001="display:block;bottom:100%" data-1500="top:100%" data-2000="top:80%" data-2500="top:50%" style="text-align:right;background-color:green;position: fixed;background-position: bottom right;"><h3><span >FACEBOOK</span></h3>-->
+        <!--</div>-->
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -150px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-100%"   style="margin-top:270px;background-image: url('layer3top.png');position: fixed;background-position: bottom center;
            background-size: auto 1038px;
     background-repeat: repeat-x;
     width: 100%;height: 1000px;"> </div>
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -30px, 0px)"  style="margin-top:100px;background-image: url('logo.png');position: fixed;background-position: center top;
+
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -30px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-100%"   style="margin-top:100px;background-image: url('logo.png');position: fixed;background-position: center top;
     background-size: auto 190px;
     background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
-
         <div ></div>
       <!--<image src= "/imports/images/layer0top.png">-->
 <!---->
@@ -55,8 +78,15 @@
 
     <!--<div data-0="margin-top:10px" data-500="margin-top:100px">WOOOT</div>-->
     </div>
-    <div style="height:1000px; margin-top:-5px; width:100%; background-color:#357c8d">
+    <div style="width:100%; min-height:1000px;background-color:#2d3e54">
 
+
+
+        {{#each actividades}}
+                <div style="min-height:1000px;background-color: #2d3e54">
+                    {{nombre}}
+                </div>
+          {{/each}}
     </div>
     <script type="text/javascript" src="skrollr.min.js"></script>
 </template>
