--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -49,6 +49,7 @@
 
         <div data-0="display:none" data-2000="display:block; top:0%" data-3000="display:block; top:50%" data-3500="display:block; top:50%" style="position: fixed;width:100%">
             <h1>
+
                 <span data-2000="margin-top:-1000px" data-3000="margin-top:-20px" data-3500="margin-top:0px" class="facebookLink" style="right:40px">K</span>
                 <span data-2500="margin-top:-1000px" data-3000="margin-top:10px" data-3500="margin-top:0px" class="facebookLink" style="right:75px">O</span>
                 <span data-1000="margin-top:-1000px" data-3200="margin-top:0px" data-3500="margin-top:0px" class="facebookLink" style="right:110px">O</span>
@@ -57,6 +58,7 @@
                 <span data-2500="margin-top:-700px" data-3000="margin-top:-100px" data-3500="margin-top:0px" class="facebookLink" style="right:215px">C</span>
                 <span data-2500="margin-top:-1000px" data-3000="margin-top:0px" data-3500="margin-top:0px" class="facebookLink" style="right:250px">A</span>
                 <span data-2500="margin-top:-1000px" data-3300="margin-top:15px" data-3500="margin-top:0px" class="facebookLink" style="right:285px">F</span>
+                <a data-2000="margin-top:-1000px;display:none" data-3000="margin-top:-10px;display:none" data-3300="margin-top:0px;display:block" class="facebookLink-click" href="https://www.facebook.com/groups/clubdelectura.uy" target="_blank" style="cursor:pointer;position:fixed;width:300px;height:80px;right:35px;"></a>
 
             </h1>
         </div>
@@ -78,7 +80,7 @@
 
     <!--<div data-0="margin-top:10px" data-500="margin-top:100px">WOOOT</div>-->
     </div>
-    <div style="width:100%; min-height:1000px;background-color:#2d3e54">
+    <div style="width:100%; height:100%;background-color:#2d3e54">
 
 
 
