--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -8,7 +8,7 @@
 
 <template name="Home">
     <!--<a href="https://imgflip.com/i/1k24g3"><img src="https://i.imgflip.com/1k24g3.jpg" title="made at imgflip.com"/></a>-->
-    <div  style="height:1000px; width:100%; background-color:#357c8d" >
+    <div  style="height:1000px; margin-bottom:-5px; width:100%;background-color: #2d3e54">
         <!--<div data-0="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(214, 30%, 25%), hsl(214, 30%, 25%));"-->
              <!--data-250 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(214, 0%, 25%), hsl(214, 30%, 25%));"-->
              <!--data-251 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(0, 0%, 25%), hsl(214, 30%, 25%));"-->
@@ -44,8 +44,8 @@
         <!--facebokk-->
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);top:800px; display:block" data-1000="transform: translate3d(0px, -150px, 0px);top:800px" data-1001="top:800px" data-1500="top:800px" data-2000="top:-10%" data-2500=";top:-10%" data-3500="top:-10%" style="background-color:#357c8d;position: fixed;background-position: bottom center;
-    width: 100%;height: 400px;"> </div>
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-1000px" data-3500="top:-1000px" style="margin-top:900px;background-color:#357c8d;position: fixed;background-position: bottom center;
+    width: 100%;height:400px"> </div>
 
         <div data-0="display:none" data-2000="display:block; top:0%" data-3000="display:block; top:50%" data-3500="display:block; top:50%" style="position: fixed;width:100%">
             <h1>
