--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -30,13 +30,13 @@
     width: 100%;height: 1000px;"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -40px, 0px)"  data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-100%" style="margin-top:50px;background-image: url('layer1top.png');position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -40px, 0px)"  data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-130%" style="margin-top:50px;background-image: url('layer1top.png');position: fixed;background-position: bottom center;
            background-size: auto 1038px;
     background-repeat: repeat-x;
     width: 100%;height: 1000px;"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -100px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-100%"  style="margin-top:250px;background-image: url('layer2top.png');position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -100px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-130%"  style="margin-top:250px;background-image: url('layer2top.png');position: fixed;background-position: bottom center;
            background-size: auto 1038px;
     background-repeat: repeat-x;
     width: 100%;height: 1000px;"> </div>
@@ -44,12 +44,26 @@
         <!--facebokk-->
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-1000px" data-3500="top:-1000px" style="margin-top:900px;background-color:#357c8d;position: fixed;background-position: bottom center;
-    width: 100%;height:400px"> </div>
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-900px" data-3500="top:-1100px" style="margin-top:800px;background-image: url('letrasTransición.png');position: fixed;background-position: bottom center;
+    width: 100%;height:550px"> </div>
+
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-900px" data-3500="top:-1000px" style="margin-top:1100px;background-image: url('letrasTipita2.png');position: fixed;background-position: bottom center;
+    width: 100%;height:550px"> </div>
+
+
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-700px" data-3500="top:-1000px"   style="margin-top:800px;left:-130px;background-image: url('letrasTipita.png');position: fixed;background-position: bottom left;
+           background-size: auto 1038px;
+    background-repeat: no-repeat;
+    width: 100%;height: 1000px;"> </div>
+
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-700px" data-3500="top:-900px"   style="margin-top:1000px;margin-left:30px;background-image: url('tipita.png');position: fixed;background-position: bottom left;
+           background-size: auto;
+    background-repeat: no-repeat;
+    width: 50%;height: 1000px;"> </div>
+
 
         <div data-0="display:none" data-2000="display:block; top:0%" data-3000="display:block; top:50%" data-3500="display:block; top:50%" style="position: fixed;width:100%">
             <h1>
-
                 <span data-2000="margin-top:-1000px" data-3000="margin-top:-20px" data-3500="margin-top:0px" class="facebookLink" style="right:40px">K</span>
                 <span data-2500="margin-top:-1000px" data-3000="margin-top:10px" data-3500="margin-top:0px" class="facebookLink" style="right:75px">O</span>
                 <span data-1000="margin-top:-1000px" data-3200="margin-top:0px" data-3500="margin-top:0px" class="facebookLink" style="right:110px">O</span>
@@ -59,15 +73,22 @@
                 <span data-2500="margin-top:-1000px" data-3000="margin-top:0px" data-3500="margin-top:0px" class="facebookLink" style="right:250px">A</span>
                 <span data-2500="margin-top:-1000px" data-3300="margin-top:15px" data-3500="margin-top:0px" class="facebookLink" style="right:285px">F</span>
                 <a data-2000="margin-top:-1000px;display:none" data-3000="margin-top:-10px;display:none" data-3300="margin-top:0px;display:block" class="facebookLink-click" href="https://www.facebook.com/groups/clubdelectura.uy" target="_blank" style="cursor:pointer;position:fixed;width:300px;height:80px;right:35px;"></a>
-
             </h1>
         </div>
         <!--<div ata-0="transform: translate3d(0px, 0px, 0px);top:95%" data-1000="transform: translate3d(0px, -150px, 0px);top:100%" data-1001="display:block;bottom:100%" data-1500="top:100%" data-2000="top:80%" data-2500="top:50%" style="text-align:right;background-color:green;position: fixed;background-position: bottom right;"><h3><span >FACEBOOK</span></h3>-->
         <!--</div>-->
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -150px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-100%"   style="margin-top:270px;background-image: url('layer3top.png');position: fixed;background-position: bottom center;
-           background-size: auto 1038px;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -150px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-120%"   style="margin-top:800px;background-color:#357c8d;position: fixed;background-position: bottom center;
+           background-size: auto;
+    background-repeat: no-repeat;
+    width: 100%;height: 400px;"> </div>
+
+
+
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -150px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-120%"   style="margin-top:-10px;background-image: url('layer3top.png');position: fixed;background-position: bottom center;
+           background-size: auto;
     background-repeat: repeat-x;
     width: 100%;height: 1000px;"> </div>
+
 
         <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -30px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-100%"   style="margin-top:100px;background-image: url('logo.png');position: fixed;background-position: center top;
     background-size: auto 190px;
