agrande las letras facebook, animacion nube de letras

--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -47,11 +47,11 @@
         <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-900px" data-3500="top:-1100px" style="margin-top:800px;background-image: url('letrasTransición.png');position: fixed;background-position: bottom center;
     width: 100%;height:550px"> </div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-900px" data-3500="top:-1000px" style="margin-top:1100px;background-image: url('letrasTipita2.png');position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-900px" data-3500="top:-1000px" class="rotation-slow" style="margin-top:900px;background-image: url('letrasTipita2.png');position: fixed;background-position: bottom center;
     width: 100%;height:550px"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-700px" data-3500="top:-1000px"   style="margin-top:800px;left:-130px;background-image: url('letrasTipita.png');position: fixed;background-position: bottom left;
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-700px" data-3500="top:-1000px" class="rotation-very-slow"  style="margin-top:800px;left:-130px;background-image: url('letrasTipita.png');position: fixed;background-position: bottom left;
            background-size: auto 1038px;
     background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
@@ -65,14 +65,14 @@
         <div data-0="display:none" data-2000="display:block; top:0%" data-3000="display:block; top:50%" data-3500="display:block; top:50%" style="position: fixed;width:100%">
             <h1>
                 <span data-2000="margin-top:-1000px" data-3000="margin-top:-20px" data-3500="margin-top:0px" class="facebookLink" style="right:40px">K</span>
-                <span data-2500="margin-top:-1000px" data-3000="margin-top:10px" data-3500="margin-top:0px" class="facebookLink" style="right:75px">O</span>
-                <span data-1000="margin-top:-1000px" data-3200="margin-top:0px" data-3500="margin-top:0px" class="facebookLink" style="right:110px">O</span>
-                <span data-2500="margin-top:-500px" data-3000="margin-top:50px" data-3500="margin-top:0px" class="facebookLink" style="right:145px">B</span>
-                <span data-2500="margin-top:-1000px" data-3300="margin-top:-15px" data-3500="margin-top:0px" class="facebookLink" style="right:180px">E</span>
-                <span data-2500="margin-top:-700px" data-3000="margin-top:-100px" data-3500="margin-top:0px" class="facebookLink" style="right:215px">C</span>
-                <span data-2500="margin-top:-1000px" data-3000="margin-top:0px" data-3500="margin-top:0px" class="facebookLink" style="right:250px">A</span>
-                <span data-2500="margin-top:-1000px" data-3300="margin-top:15px" data-3500="margin-top:0px" class="facebookLink" style="right:285px">F</span>
-                <a data-2000="margin-top:-1000px;display:none" data-3000="margin-top:-10px;display:none" data-3300="margin-top:0px;display:block" class="facebookLink-click" href="https://www.facebook.com/groups/clubdelectura.uy" target="_blank" style="cursor:pointer;position:fixed;width:300px;height:80px;right:35px;"></a>
+                <span data-2500="margin-top:-1000px" data-3000="margin-top:10px" data-3500="margin-top:0px" class="facebookLink" style="right:115px">O</span>
+                <span data-1000="margin-top:-1000px" data-3200="margin-top:0px" data-3500="margin-top:0px" class="facebookLink" style="right:195px">O</span>
+                <span data-2500="margin-top:-500px" data-3000="margin-top:50px" data-3500="margin-top:0px" class="facebookLink" style="right:275px">B</span>
+                <span data-2500="margin-top:-1000px" data-3300="margin-top:-15px" data-3500="margin-top:0px" class="facebookLink" style="right:355px">E</span>
+                <span data-2500="margin-top:-700px" data-3000="margin-top:-100px" data-3500="margin-top:0px" class="facebookLink" style="right:430px">C</span>
+                <span data-2500="margin-top:-1000px" data-3000="margin-top:0px" data-3500="margin-top:0px" class="facebookLink" style="right:505px">A</span>
+                <span data-2500="margin-top:-1000px" data-3300="margin-top:15px" data-3500="margin-top:0px" class="facebookLink" style="right:580px">F</span>
+                <a data-2000="margin-top:-1000px;display:none" data-3000="margin-top:-10px;display:none" data-3300="margin-top:0px;display:block" class="facebookLink-click" href="https://www.facebook.com/groups/clubdelectura.uy" target="_blank" style="cursor: pointer;position: fixed; width: 630px; height: 114px;right: 35px; margin-top: 0px; display: block;"></a>
             </h1>
         </div>
         <!--<div ata-0="transform: translate3d(0px, 0px, 0px);top:95%" data-1000="transform: translate3d(0px, -150px, 0px);top:100%" data-1001="display:block;bottom:100%" data-1500="top:100%" data-2000="top:80%" data-2500="top:50%" style="text-align:right;background-color:green;position: fixed;background-position: bottom right;"><h3><span >FACEBOOK</span></h3>-->
