--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -30,15 +30,15 @@
     width: 100%;height: 1000px;"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -40px, 0px)"  data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-130%" style="margin-top:50px;background-image: url('layer1top.png');position: fixed;background-position: bottom center;
-           background-size: auto 1038px;
-    background-repeat: repeat-x;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -40px, 0px)"  data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-130%" style="margin-top:-100px;background-image: url('layer1top.png');position: fixed;background-position: bottom center;
+           background-size: auto;
+    background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -100px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-130%"  style="margin-top:250px;background-image: url('layer2top.png');position: fixed;background-position: bottom center;
-           background-size: auto 1038px;
-    background-repeat: repeat-x;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -100px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-130%"  style="margin-left:-10px;margin-top:50px;background-image: url('layer2top.png');position: fixed;background-position: bottom center;
+           background-size: auto;
+    background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
 
         <!--facebokk-->
@@ -84,9 +84,9 @@
 
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -150px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-120%"   style="margin-top:-10px;background-image: url('layer3top.png');position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-1000="transform: translate3d(0px, -150px, 0px)" data-1001="display:block; top:0%" data-1500="top:0%" data-2000="display:none;top:-120%"   style="margin-top: 100px; background-image: url('layer3top.png');position: fixed;background-position: bottom center;
            background-size: auto;
-    background-repeat: repeat-x;
+    background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
 
 
