addded bottom menu

--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -101,7 +101,19 @@
 
     <!--<div data-0="margin-top:10px" data-500="margin-top:100px">WOOOT</div>-->
     </div>
-    <div style="width:100%; height:100%;background-color:#2d3e54">
+
+    <div data-0="display:none;bottom:-50px" data-3400="display:block;" data-3500="bottom:0px" data-end="bottom:0px" class="bottom-menu">
+        <ul>
+           <li class="horizontal-menu-item">NOSOTROS</li>
+           <li class="horizontal-menu-item">FACEBOOK</li>
+           <li class="horizontal-menu-item">LIBROS LEIDOS</li>
+           <li class="horizontal-menu-item">RESEÑAS</li>
+           <li class="horizontal-menu-item">COLABORADORES</li>
+           <li class="horizontal-menu-item">ACTIVIDADES</li>
+        </ul>
+    </div>
+
+    <div style="width:100%; height:1000%;background-color:#2d3e54">
 
 
 
