--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -61,6 +61,18 @@
     background-repeat: no-repeat;
     width: 50%;height: 1000px;"> </div>
 
+        <div data-0="display:none" data-2000="display:block; top:0%" data-3000="display:block; top:50%" data-3500="display:block; top:50%" style="margin-top:-90px;position: fixed;width:100%">
+            <h1>
+                <span data-2000="margin-top:-900px" data-3000="margin-top:20px" data-3500="margin-top:0px" class="uniteALink" style="right:60px">A</span>
+                <!--<span data-2500="margin-top:-1000px" data-3000="margin-top:10px" data-3500="margin-top:0px" class="uniteALink" style="right:115px"></span>-->
+                <!--<span data-1000="margin-top:-1000px" data-3200="margin-top:0px" data-3500="margin-top:0px" class="uniteALink" style="right:195px"></span>-->
+                <span data-2500="margin-top:-1000px" data-3000="margin-top:0px" data-3500="margin-top:0px" class="uniteALink" style="right:180px">E</span>
+                <span data-2500="margin-top:-800px" data-3300="margin-top:5px" data-3500="margin-top:0px" class="uniteALink" style="right:250px">T</span>
+                <span data-2500="margin-top:-1200px" data-3000="margin-top:-25px" data-3500="margin-top:0px" class="uniteALink" style="right:315px">I</span>
+                <span data-2500="margin-top:-900px" data-2900="margin-top:-10px" data-3500="margin-top:0px" class="uniteALink" style="right:358px">N</span>
+                <span data-2500="margin-top:-500px" data-3300="margin-top:0px" data-3500="margin-top:0px" class="uniteALink" style="right:426px">U</span>
+            </h1>
+        </div>
 
         <div data-0="display:none" data-2000="display:block; top:0%" data-3000="display:block; top:50%" data-3500="display:block; top:50%" style="position: fixed;width:100%">
             <h1>
@@ -72,7 +84,7 @@
                 <span data-2500="margin-top:-700px" data-3000="margin-top:-100px" data-3500="margin-top:0px" class="facebookLink" style="right:430px">C</span>
                 <span data-2500="margin-top:-1000px" data-3000="margin-top:0px" data-3500="margin-top:0px" class="facebookLink" style="right:505px">A</span>
                 <span data-2500="margin-top:-1000px" data-3300="margin-top:15px" data-3500="margin-top:0px" class="facebookLink" style="right:580px">F</span>
-                <a data-2000="margin-top:-1000px;display:none" data-3000="margin-top:-10px;display:none" data-3300="margin-top:0px;display:block" class="facebookLink-click" href="https://www.facebook.com/groups/clubdelectura.uy" target="_blank" style="cursor: pointer;position: fixed; width: 630px; height: 114px;right: 35px; margin-top: 0px; display: block;"></a>
+                <a data-2000="margin-top:-1000px;display:none" data-3000="margin-top:-10px;display:none" data-3300="margin-top:-97px;display:block" class="facebookLink-click" href="https://www.facebook.com/groups/clubdelectura.uy" target="_blank" style="cursor: pointer;position: fixed; width: 630px; height: 169px;right: 35px; margin-top:-97px; display: block;"></a>
             </h1>
         </div>
         <!--<div ata-0="transform: translate3d(0px, 0px, 0px);top:95%" data-1000="transform: translate3d(0px, -150px, 0px);top:100%" data-1001="display:block;bottom:100%" data-1500="top:100%" data-2000="top:80%" data-2500="top:50%" style="text-align:right;background-color:green;position: fixed;background-position: bottom right;"><h3><span >FACEBOOK</span></h3>-->
